# extremedb-rs

./: .gitignore  Cargo.toml  README.md
extremedb/: Cargo.toml  README.md
extremedb/src/: connection.rs  database.rs  device.rs  dict.rs  lib.rs  runtime.rs  sql.rs  util.rs
extremedb/src/device/: util.rs
extremedb/src/sql/: allocator.rs  data_source.rs  engine.rs  rsql.rs  stmt.rs  trans.rs  value.rs
extremedb/src/sql/rsql/: client.rs  server.rs
extremedb_sys/: Cargo.toml  README.md  build.rs
extremedb_sys/src/: core.rs  lib.rs  sql.rs
extremedb_sys/src/cpp/: CMakeLists.txt  rssql.cpp  rssql.h
extremedb_sys/src/sql/: rsql.rs
extremedb_sys/tests/api_check/: api.rs  main.rs
