# Cargo.toml
#
# This file is a part of the eXtremeDB source code
# Copyright (c) 2020 McObject LLC
# All Rights Reserved

[package]
name = "extremedb"
version = "0.1.2"
authors = ["McObject LLC <info@mcobject.com>"]
edition = "2018"
license = "MIT"
description = "McObject eXtremeDB bindings"
homepage = "https://mcobject.com"
documentation = "https://docs.rs/extremedb"
repository = "https://github.com/mcobject/extremedb-rs"
readme = "README.md"

[dependencies]
extremedb_sys = "0.1.1"

[features]
sequences = ["extremedb_sys/sequences"]
sql = ["extremedb_sys/sql"]
rsql = ["sql", "extremedb_sys/rsql"]

[package.metadata.docs.rs]
all-features = true
