# Cargo.toml
#
# This file is a part of the eXtremeDB source code
# Copyright (c) 2020 McObject LLC
# All Rights Reserved

[package]
name = "extremedb_sys"
version = "0.1.1"
authors = ["McObject LLC <info@mcobject.com>"]
edition = "2018"
license = "MIT"
description = "FFI bindings to McObject eXtremeDB"
homepage = "https://mcobject.com"
documentation = "https://docs.rs/extremedb_sys"
repository = "https://github.com/mcobject/extremedb-rs"
readme = "README.md"

[dependencies]

[build-dependencies]

[dev-dependencies]
bindgen = "0.54"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = "1.0"

[features]

# These features are enabled by the extremedb package.
# See its documentation and the Cargo.toml manifest for details.
sequences = []
sql = ["sequences"]
rsql = ["sql"]
